# opendavis

./: .gitignore  meson.build  package.json  readme.md
client/: .babelrc  package-lock.json  package.json  sfc.d.ts  tsconfig.json
client/config/: index.js
client/src/: main.js  router.js
client/src/components/: layout.vue  teste.js  testets.ts
include/opendavis/: opendavis.hpp
include/opendavis/ui/: application.hpp  dom.hpp
old-client/: README.md
old-client/src/: index.ejs
old-client/src/renderer/: App.vue
server/: CMakeLists.txt
server/cmake/: FindLibevent2.cmake
server/nbproject/: configurations.xml  project.properties  project.xml
server/nbproject/private/: Default.properties  configurations.xml  private.xml
server/src/: httpsrv.cpp  httpsrv.h  main.cpp
src/: main.cpp
src/ui/: application.cpp  dom.cpp
